--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 #root {
   margin: 0 5px;
+  
+}
+h1 {
+  text-align: center;
 }
 .newslist {
   display: flex;
@@ -9,14 +13,15 @@
   padding: 10px;
   background: #ffffff;
   border: 1px solid #e3e3e3;
+  margin-left: -40px;
+}
+
+.newlist:hover {
+  color: green;
 }
 
 .news > a{
   padding: 0 3px;
-}
-
-.edit-news {
-
 }
 
 input.input-news {
@@ -30,11 +35,12 @@ textarea.input-news {
 
 .buttonMore {
   background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+  border: none;
+  color: white;
+  padding: 15px 0;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  width: 100%;
 }
